--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/navigation_upcoming"
+        android:icon="@mipmap/ic_toprated"
+        android:title="@string/title_upcoming" />
+
+    <item
         android:id="@+id/navigation_toprated"
         android:icon="@mipmap/ic_toprated"
         android:title="@string/title_toprated" />
