--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="15dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="10dp"
         android:background="@color/bg_main"
         android:theme="@style/Theme.MyApplication.AppBarOverlay">
 
@@ -33,7 +33,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@drawable/round_corners"
         android:paddingLeft="5dp"
         android:paddingTop="10dp"
         android:paddingRight="5dp"
@@ -41,20 +40,19 @@
 
 
     <me.ibrahimsn.lib.SmoothBottomBar
-
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        app:itemIconSize="20dp"
+        android:layout_marginTop="5dp"
+        app:backgroundColor="@color/bg_main2"
         app:iconTint="@color/color_font"
         app:iconTintActive="@color/txt_color"
         app:indicatorColor="@color/card_color"
         app:indicatorRadius="10dp"
-        app:textSize="9sp"
-        app:textColor="@color/white"
-        app:backgroundColor="@color/bg_main2"
+        app:itemIconSize="20dp"
         app:menu="@menu/bottom_nav_menu"
-     />
+        app:textColor="@color/white"
+        app:textSize="9sp" />
 
 
 </LinearLayout>
