--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipe_discover"
     android:layout_width="match_parent"
+    android:background="@drawable/round_corners"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
