--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,11 @@
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="38dp"
             android:background="@drawable/background_bar_border"
             app:popupTheme="@style/Theme.MyApplication.PopupOverlay"
-            app:titleTextColor="@color/color_font" />
+            app:titleTextColor="@color/color_font"
+            />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -34,7 +35,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:paddingLeft="5dp"
-        android:paddingTop="10dp"
+        android:paddingTop="5dp"
         android:paddingRight="5dp"
         android:paddingBottom="5dp" />
 
@@ -42,7 +43,7 @@
     <me.ibrahimsn.lib.SmoothBottomBar
         android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="50dp"
         android:layout_marginTop="5dp"
         app:backgroundColor="@color/bg_main2"
         app:iconTint="@color/color_font"
